updated index.html to link to the calculator html page

--- a/KennyH1886.github.io-main/a3/index.html
+++ b/KennyH1886.github.io-main/a3/index.html
@@ -34,5 +34,8 @@
 
     <!-- Link to navigate to the Introduction page -->
     <p><a href="introduction.html">Go to Introduction Page</a></p>
+
+    <!-- Link to navigate to the Calcualtor page -->
+    <p><a href="calculator.html">Go to the calculator application with table functionality</a></p>
 </body>
 </html>
